--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hello world
+<html>
+<body>
+  <h1>Counting rabbits</h1>
+
+  <script>
+    for(var i=1; i<=3; i++) {
+      alert("Rabbit "+i+" out of the hat!")
+    }
+  </script>
+
+  <h1>...Finished counting</h1>
+
+</body>
+</html>
