trying to display image from google

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 
   <h1>...Finished counting</h1>
 
+  <img style="margin-top: 68px;" alt="Image result for random picture" onload="google.aft&amp;&amp;google.aft(this)" src="http://www.qygjxz.com/data/out/193/4094485-random-picture.gif" class="irc_mi" height="278" width="400">
+
 </body>
 </html>
